detekt-rules/naming/src/test/resources/InvalidPackageDeclarationSpec/src/File.kt
package com.example

class C
